# django_template

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  bun.lockb  docker-compose.dev.yaml  docker-compose.yaml  package.json  pyproject.toml  tailwind.config.js  uno.config.ts  vite.config.js
config/: celery.py  jinja2.py  settings.py  urls.py
core/: forms.py  models.py
core/jinja2/: base.html  base.j2
core/jinja2/components/: pagination.html
core/management/commands/: crud.py  generate_key.py  make_crud.py  make_forms.py  make_templates.py  make_urls.py  make_views.py  seed.py
core/management/commands/stubs/: forms.py.jinja2  models.py.jinja2  urls.py.jinja2  views.py.jinja2
core/management/commands/stubs/templates/: delete.html.jinja2  detail.html.jinja2  form.html.jinja2  layout.html.jinja2  list.html.jinja2  table_partial.html.jinja2
jinja/components/: form.html
jinja/layouts/: base.html  users.html
jinja/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_email_sent.html  register.html
jinja/users/emails/: password_reset_email.html  password_reset_subject.txt
resources/css/: app.css
resources/js/: app.js  app.ts  unpoly_extensions.js
static/css/: main.css  tw.css  uno.css
users/: admin.py  forms.py  models.py  tests.py  views.py
users/jinja2/users/: base.html  login.html  login.j2  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_email_sent.html  register.html  register.j2
users/jinja2/users/emails/: password_reset_email.mjml
users/migrations/: 0001_initial.py  0002_alter_user_id.py
