[project]
name = "django_template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Ankur Paudel", email = "ankur@paudel.me" }]
dependencies = [
    "django>=5.0.6",
    "jinja2>=3.1.4",
    "django-vite>=3.0.4",
    "python-dotenv>=1.0.1",
    "whitenoise>=6.6.0",
    "django-debug-toolbar>=4.3.0",
    "lxml>=5.2.2",
    "faker>=25.1.0",
    "gunicorn>=22.0.0",
    "dj-database-url>=2.1.0",
    "pymysql>=1.1.0",
    "psycopg[binary]>=3.1.19",
    "redis>=5.0.4",
    "django-rq>=2.10.2",
    "django-rq-email-backend>=1.0.1",
    "inquirer>=3.3.0",
    "django-unfold>=0.37.0",
    "django-jazzmin>=3.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "djlint>=1.34.1",
]
