[project]
name = "django-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.1",
    "django-vite>=3.0.4",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "whitenoise>=6.7.0",
    "django-debug-toolbar>=4.4.6",
    "faker>=28.4.1",
    "gunicorn>=23.0.0",
    "dj-database-url>=2.2.0",
    "psycopg[binary]>=3.2.1",
    "redis>=5.0.8",
    "django-rq>=2.10.2",
    "django-rq-email-backend>=1.0.1",
    "pymysql>=1.1.1",
]
